Refactoring + JSON Polymorphism + Spring Boot integration preparation & cleanup