@@ -1,4 +1,4 @@
-package com.vingame.bot.authentication;
+package com.vingame.bot.environment;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.databind.JsonNode;
@@ -7,12 +7,13 @@ import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
+import java.io.BufferedReader;
 import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.util.function.Consumer;
 
 @Slf4j
@@ -20,21 +21,27 @@ public class GameMsClient {
 
     private static final ObjectMapper mapper = new ObjectMapper();
 
-    private final HttpClient httpClient = HttpClient.newHttpClient();
-
     private static final String GAME_MS_URL = "http://gamems.dev:5007";
 
-    private final String agencyToken;
-    private final int agencyId;
+    private String agencyToken;
+    private int agencyId;
 
     private String uuid = null;
     private String memberId = null;
 
 
-    public GameMsClient(String agencyToken) {
-        this.agencyToken = agencyToken;
-
-        this.agencyId = Integer.parseInt(this.agencyToken.substring(0, 1));
+    private String readResponse(HttpURLConnection conn) throws IOException {
+        InputStream is = (conn.getResponseCode() < HttpURLConnection.HTTP_BAD_REQUEST)
+                ? conn.getInputStream()
+                : conn.getErrorStream();
+        BufferedReader in = new BufferedReader(new InputStreamReader(is, "UTF-8"));
+        StringBuilder response = new StringBuilder();
+        String inputLine;
+        while ((inputLine = in.readLine()) != null) {
+            response.append(inputLine);
+        }
+        in.close();
+        return response.toString();
     }
 
     public void deposit(long amount, Consumer<Boolean> onComplete) {
@@ -52,22 +59,29 @@ public class GameMsClient {
                         .amount(amount)
                         .build();
 
-                HttpRequest request = HttpRequest.newBuilder()
-                        .uri(new URI(GAME_MS_URL + "/gamems/v1/agency/transfer"))
-                        .header("Cache-Control", "no-cache")
-                        .header("Content-Type", "application/json")
-                        .header("User-Agent", "PostmanRuntime/7.15.2")
-                        .POST(HttpRequest.BodyPublishers.ofString("[" + requestBody.serialize() + "]"))
-                        .build();
+                String urlString = GAME_MS_URL + "/gamems/v1/agency/transfer";
+                URL url = new URL(urlString);
+                HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+                conn.setRequestMethod("POST");
+                conn.setRequestProperty("Cache-Control", "no-cache");
+                conn.setRequestProperty("Content-Type", "application/json");
+                conn.setRequestProperty("User-Agent", "PostmanRuntime/7.15.2");
+                conn.setDoOutput(true);
 
-                HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+                String jsonBody = "[" + requestBody.serialize() + "]";
+                try (OutputStream os = conn.getOutputStream()) {
+                    os.write(jsonBody.getBytes("UTF-8"));
+                }
 
-                boolean success = response.statusCode() == 200;
+                int responseCode = conn.getResponseCode();
+                String responseBody = readResponse(conn);
+
+                boolean success = responseCode == 200;
                 onComplete.accept(success);
 
-                log.info("Response code: {} | response body: {}", response.statusCode(), response.body());
+                log.info("Response code: {} | response body: {}", responseCode, responseBody);
 
-            } catch (URISyntaxException | IOException | InterruptedException e) {
+            } catch (IOException e) {
                 throw new RuntimeException(e);
             }
         }));
@@ -85,26 +99,25 @@ public class GameMsClient {
             try {
                 log.info("Fetching token details");
 
-                log.info("URI {}", new URI(GAME_MS_URL + "/gamems/v1/agency/verifytoken/" + agencyToken));
+                String urlString = GAME_MS_URL + "/gamems/v1/agency/verifytoken/" + agencyToken;
+                log.info("URI {}", urlString);
 
-                HttpRequest request = HttpRequest.newBuilder()
-                        .uri(new URI(GAME_MS_URL + "/gamems/v1/agency/verifytoken/" + agencyToken))
-                        .header("Cache-Control", "no-cache")
-                        .header("Content-Type", "application/json")
-                        .header("User-Agent", "PostmanRuntime/7.15.2")
-                        .GET()
-                        .build();
+                URL url = new URL(urlString);
+                HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+                conn.setRequestMethod("GET");
+                conn.setRequestProperty("Cache-Control", "no-cache");
+                conn.setRequestProperty("Content-Type", "application/json");
+                conn.setRequestProperty("User-Agent", "PostmanRuntime/7.15.2");
 
-                HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-                JsonNode dataArray = mapper.readTree(response.body()).get("data");
+                String responseBody = readResponse(conn);
+                JsonNode dataArray = mapper.readTree(responseBody).get("data");
 
-                log.info("Token details: {}", response.body());
+                log.info("Token details: {}", responseBody);
 
                 uuid = dataArray.get(0).get("uid").asText();
                 memberId = dataArray.get(0).get("member_id").asText();
 
-
-            } catch (URISyntaxException | IOException | InterruptedException e) {
+            } catch (IOException e) {
                 throw new RuntimeException(e);
             }
         }));
@@ -115,6 +128,11 @@ public class GameMsClient {
         } catch (InterruptedException e) {
             throw new RuntimeException(e);
         }
+    }
+
+    public void setAgencyToken(String agencyToken) {
+        this.agencyToken = agencyToken;
+        this.agencyId = Integer.parseInt(this.agencyToken.substring(0, 1));
     }
 
     @Getter
